--- a/templates/allauth/templates/base.html
+++ b/templates/allauth/templates/base.html
@@ -3,6 +3,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+    {% block meta %}
     <!-- Required meta tags -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta charset="utf-8" />
@@ -10,7 +12,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    {% endblock %}
 
+    {% block corecss %}
     <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
@@ -18,7 +22,15 @@
       integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
       crossorigin="anonymous"
     />
+    {% endblock %}
 
+    {% block extra_meta %}
+    {% endblock %}
+
+    {% block extra_css %}
+    {% endblock %}
+
+    {% block corejs %}
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -29,8 +41,28 @@
       integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
       crossorigin="anonymous"
     ></script>
+    {% endblock %}
 
-    <title>Sip Out Loud</title>
+    {% block extra_js %}
+    {% endblock %}
+
+    <title>Sip Out Loud {% block extra_title %}{% endblock %} </title>
   </head>
-  <body></body>
+  <body>
+    <header class="container-fluid fixed-top"> </header>
+
+    {% if message %}
+    <div class="message-container"></div>
+    {% endblock %}
+
+    {% block page_header %}
+    {% endblock %}
+
+    {% block content %}
+    {% endblock %}
+
+    {% block postloadjs %}
+    {% endblock %}
+
+  </body>
 </html>
