Add home app and templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -51,9 +51,9 @@
   <body>
     <header class="container-fluid fixed-top"> </header>
 
-    {% if message %}
-    <div class="message-container"></div>
-    {% endblock %}
+    {% if messages %}
+        <div class="message-container"></div>
+    {% endif %}
 
     {% block page_header %}
     {% endblock %}
