--- a/templates/base.html
+++ b/templates/base.html
@@ -43,26 +43,55 @@
     ></script>
     {% endblock %}
 
-    {% block extra_js %}
-    {% endblock %}
-
     <title>Sip Out Loud {% block extra_title %}{% endblock %} </title>
   </head>
-  <body>
-    <header class="container-fluid fixed-top"> </header>
+  <body class="bg-dark text-white">
+    <header class="container-fluid fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="{% url 'home' %}">
+                <h2 class="logo-font text-light"><strong>Sip</strong> Out Loud</h2>
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'products' %}">Products</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'about' %}">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'contact' %}">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'view_bag' %}">
+                            <i class="fas fa-shopping-bag"></i> Bag
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'account_login' %}">
+                            <i class="fas fa-user"></i> Account
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 
-    {% if messages %}
-        <div class="message-container"></div>
-    {% endif %}
+    <main class="mt-5 pt-5">
+        {% block content %}{% endblock %}
+    </main>
 
-    {% block page_header %}
-    {% endblock %}
+    <footer class="bg-dark text-white py-4 mt-5">
+        <div class="container text-center">
+            <p>&copy; 2025 Sip Out Loud. All Rights Reserved.</p>
+            <p>Made with ❤️ by your favorite team.</p>
+        </div>
+    </footer>
 
-    {% block content %}
-    {% endblock %}
+    {% block extra_js %}{% endblock %}
+</body>
 
-    {% block postloadjs %}
-    {% endblock %}
-
-  </body>
 </html>
