Add home page image

--- a/templates/base.html
+++ b/templates/base.html
@@ -43,6 +43,7 @@
       crossorigin="anonymous"
     ></script>
     {% endblock %}
+    <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
 
     <title>Sip Out Loud {% block extra_title %}{% endblock %} </title>
   </head>
