--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,10 +1,30 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+/* Ensure full height for body and html */
+html, body {
+    height: 100%;
+    margin: 0;
+}
+
+/* General Styles */
+html, body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden; /* Prevents horizontal scrolling */
+}
 
 /* General Styles */
 body {
     background-color: #000;
-    color: #fff;
-    font-family: 'Poppins', sans-serif;
+    background-image: url(/media/whiskey-background.jpg);
+    background-repeat: no-repeat;
+    background-position: center bottom; /* Move image closer to the bottom */
+    background-size: cover; /* Ensures full width and height */
+    min-height: 100vh;
+    width: 100vw; /* Forces full width */
+    display: flex;
+    flex-direction: column;
+    color: #fff; /* Change body text color to white */
 }
 
 /* Header */
@@ -29,6 +49,16 @@ header {
     color: #af965e !important;
     font-size: 18px;
     margin-right: 20px;
+    transition: color 0.3s ease-in-out, transform 0.2s ease-in-out;
+}
+
+.navbar-nav .nav-link:hover {
+    background-color: rgba(255, 255, 255, 0.1); /* Subtle background effect */
+    border-radius: 5px; /* Slight rounding for a smooth look */
+    padding: 5px 10px; /* Adjust padding */
+    transform: scale(1.1);
+    text-decoration: underline;
+    
 }
 
 .navbar-toggler {
@@ -49,7 +79,7 @@ header {
 
 .btn-gold {
     background-color: #af965e;
-    color: #000;
+    color: #fff !important;
     padding: 10px 15px;
     border-radius: 30px;
     font-weight: bold;
@@ -61,8 +91,10 @@ header {
 
 /* Footer */
 footer {
-    background: #000;
+    background-color: #000; 
+    color: white;
+    padding: 10px 0;
+    margin-top: auto; /* Ensures footer stays at the bottom */
     text-align: center;
-    padding: 20px;
-    margin-top: 50px;
+    width: 100%;
 }
