--- a/templates/base.html
+++ b/templates/base.html
@@ -24,52 +24,59 @@
 <body>
     <!-- Header -->
     <header class="container-fluid fixed-top bg-black p-3">
-        <div class="d-flex justify-content-between align-items-center">
-            <a href="{% url 'home' %}" class="main-logo-link d-flex align-items-center text-decoration-none">
-                <img src="{% get_media_prefix %}logo-solid.png" alt="Sip Out Loud Logo" class="logo-img">
-                <h2 class="text-light m-0 ml-2">Sip Out Loud</h2>
-            </a>
-            
-            <nav class="navbar navbar-expand-lg">
-                <button class="navbar-toggler text-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                    <i class="fas fa-bars"></i>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav me-auto">
-                        <li class="nav-item"><a class="nav-link text-light" href="#">Home</a></li>
-                        <li class="nav-item"><a class="nav-link text-light" href="#">Collection</a></li>
-                        <li class="nav-item"><a class="nav-link text-light" href="#">Contact Us</a></li>
-                    </ul>
-                </div>
-            </nav>
-            
-            <form class="d-flex">
-                <input class="form-control rounded-pill" type="search" placeholder="Search...">
-                <button class="btn btn-gold rounded-pill ms-2">Search</button>
-            </form>
-        </div>
-    </header>
+    <div class="d-flex justify-content-between align-items-center">
+        <a href="{% url 'home' %}" class="main-logo-link d-flex align-items-center text-decoration-none">
+            <img src="{% get_media_prefix %}logo-solid.png" alt="Sip Out Loud Logo" class="logo-img">
+            <h2 class="text-light m-0 ml-2">Sip Out Loud</h2>
+        </a>
 
-    <div class="container mt-5 pt-5">
-        <div class="row">
-            <div class="col-12 col-lg-4 text-center text-lg-left">
-                {% if request.user.is_authenticated %}
-                    {% if request.user.is_superuser %}
-                        <a href="#" class="btn btn-primary">Project Management</a>
-                    {% endif %}
-                {% endif %}
-            </div>
-            <div class="col-12 col-lg-4 my-auto text-center">
-                <p class="text-light">Total: 
-                    {% if grand_total %}
-                        €{{ grand_total|floatformat:2 }}
+        <form class="d-flex">
+            <input class="form-control rounded-pill" type="search" placeholder="Search...">
+            <button class="btn btn-gold rounded-pill ms-2">Search</button>
+        </form>
+        
+        <nav class="navbar navbar-expand-lg">
+            <button class="navbar-toggler text-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <i class="fas fa-bars"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item"><a class="nav-link text-light" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link text-light" href="#">Collection</a></li>
+                    <li class="nav-item"><a class="nav-link text-light" href="#">Contact Us</a></li>
+                </ul>
+                <ul class="navbar-nav ms-auto">
+                    {% if request.user.is_authenticated %}
+                        {% if request.user.is_superuser %}
+                            <li class="nav-item">
+                                <a href="#" class="nav-link text-light">Project Management</a>
+                            </li>
+                        {% endif %}
+                        <li class="nav-item">
+                            <a href="{% url 'logout' %}" class="nav-link text-light">Logout</a>
+                        </li>
                     {% else %}
-                        €0.00
+                        <li class="nav-item">
+                            <a href="{% url 'login' %}" class="nav-link text-light">Login</a>
+                        </li>
                     {% endif %}
-                </p>
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="#">Total: 
+                            {% if grand_total %}
+                                €{{ grand_total|floatformat:2 }}
+                            {% else %}
+                                €0.00
+                            {% endif %}
+                        </a>
+                    </li>
+                </ul>
             </div>
-        </div>
+        </nav>
+        
     </div>
+</header>
+
+
     
     {% if messages %}
         <div class="message-container"></div>
