Add sections for alcohol categories and create individual htmls

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -11,20 +11,51 @@
     </div>
   </section>
 
+  <!-- categories -->
+  <section class="categories">
+    <h2>Browse by Category</h2>
+    <div class="category-container">
+      <div class="category">
+        <img src="{% static 'images/whiskey-collection.jpg' %}" alt="Whiskey Collection">
+        <h3>Whiskey</h3>
+        <p>Experience the finest selection of aged whiskey.</p>
+        <a href="{% url 'whiskey' %}" class="btn btn-secondary">See Collection</a>
+      </div>
+      <div class="category">
+        <img src="{% static 'images/gin-collection.jpg' %}" alt="Gin Collection">
+        <h3>Gin</h3>
+        <p>Explore our range of botanically infused gins.</p>
+        <a href="{% url 'gin' %}" class="btn btn-secondary">See Collection</a>
+      </div>
+      <div class="category">
+        <img src="{% static 'images/vodka-collection.jpg' %}" alt="Vodka Collection">
+        <h3>Vodka</h3>
+        <p>Discover smooth and refined premium vodkas.</p>
+        <a href="{% url 'vodka' %}" class="btn btn-secondary">See Collection</a>
+      </div>
+      <div class="category">
+        <img src="{% static 'images/Wine-collection.jpg' %}" alt="Wine Collection">
+        <h3>Wine</h3>
+        <p>Enjoy a curated selection of world-class wines.</p>
+        <a href="{% url 'wine' %}" class="btn btn-secondary">See Collection</a>
+      </div>
+    </div>
+  </section>
+
   <!-- Features Section -->
   <section class="features">
     <div class="feature">
-      <img src="{% static 'images/quality.jpg' %}" alt="Quality Selection">
+      <img src="{{ MEDIA_URL }}quality.jpg" alt="Quality Selection">
       <h2>Quality Selection</h2>
       <p>We offer a wide variety of top-shelf wines, whiskeys, gins, and more.</p>
     </div>
     <div class="feature">
-      <img src="{% static 'images/secure-payment.jpg' %}" alt="Safe Payment">
+      <img src="{{ MEDIA_URL }}secure-payment.jpg" alt="Safe Payment">
       <h2>Safe & Secure Payment</h2>
       <p>Shop with confidence using our secure payment options.</p>
     </div>
     <div class="feature">
-      <img src="{% static 'images/fast-delivery.png' %}" alt="Fast Delivery">
+      <img src="{{ MEDIA_URL }}fast-delivery.png" alt="Fast Delivery">
       <h2>Fast Delivery</h2>
       <p>Enjoy fast delivery to your doorsteps in no time.</p>
     </div>
