--- a/templates/base.html
+++ b/templates/base.html
@@ -87,6 +87,20 @@
 
     <!-- Footer -->
     <footer class="text-center text-light p-3 bg-black">
+        <div class="footer-social">
+            <a href="https://youtube.com/" target="_blank" rel="noopener" aria-label="Go to our Youtube page (opens in a new tab)">
+                <i class="fa-brands fa-square-youtube"></i>
+            </a>
+            <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Go to our Facebook page (opens in a new tab)">
+                <i class="fa-brands fa-square-facebook"></i>
+            </a>
+            <a href="https://instagram.com/" target="_blank" rel="noopener" aria-label="Go to our Instagram page (opens in a new tab)">
+                <i class="fa-brands fa-square-instagram"></i>
+            </a>
+            <a href="https://twitter.com/" target="_blank" rel="noopener" aria-label="Go to our Twitter page (opens in a new tab)">
+                <i class="fa-brands fa-square-x-twitter"></i>
+            </a>
+        </div>
         <p>&copy; 2025 Sip Out Loud. All rights reserved.</p>
     </footer>
     
