--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,10 @@
                             </li>
                         {% endif %}
                         <li class="nav-item">
-                            <a href="{% url 'logout' %}" class="nav-link text-light">Logout</a>
+                            <form action="{% url 'logout' %}" method="post" class="d-inline">
+                                {% csrf_token %}
+                                <button type="submit" class="nav-link text-light btn btn-link border-0 p-0">Logout</button>
+                            </form>
                         </li>
                     {% else %}
                         <li class="nav-item">
