--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
                     <li class="nav-item"><a class="nav-link text-light" href="#">Collection</a></li>
                     <li class="nav-item"><a class="nav-link text-light" href="#">Contact Us</a></li>
                 </ul>
-                <ul class="navbar-nav ms-auto">
+                <ul class="navbar-nav ms-auto align-items-center">
                     {% if request.user.is_authenticated %}
                         {% if request.user.is_superuser %}
                             <li class="nav-item">
@@ -55,7 +55,7 @@
                         <li class="nav-item">
                             <form action="{% url 'logout' %}" method="post" class="d-inline">
                                 {% csrf_token %}
-                                <button type="submit" class="nav-link text-light btn btn-link border-0 p-0">Logout</button>
+                                <button type="submit" class="nav-link text-light border-0 p-0">Logout</button>
                             </form>
                         </li>
                     {% else %}
