--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,10 +1,7 @@
-/* Ensure full height for body and html */
-html, body {
-    height: 100%;
-    margin: 0;
-}
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-/* General Styles */
+
+/* Ensure full height for body and html */
 html, body {
     height: 100%;
     width: 100%;
@@ -15,6 +12,7 @@ html, body {
 
 /* General Styles */
 body {
+    font-family: 'Montserrat', sans-serif;
     background-color: #000;
     background-image: url(/media/whiskey-background.jpg);
     background-repeat: no-repeat;
@@ -29,6 +27,7 @@ body {
 
 /* Header */
 header {
+    font-family: 'Poppins', sans-serif;
     background: #000;
     padding: 15px 30px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
@@ -39,6 +38,10 @@ header {
     align-items: center;
 }
 
+.main-logo-link h2 {
+    font-family: 'Poppins', sans-serif;
+}
+
 .logo-img {
     height: 50px;
     margin-right: 10px;
@@ -46,6 +49,7 @@ header {
 
 /* Navbar */
 .navbar-nav .nav-link {
+    font-family: 'Poppins', sans-serif;
     color: #af965e !important;
     font-size: 18px;
     margin-right: 20px;
@@ -191,29 +195,40 @@ h1, h2, h3 {
 }
 
 .category h3 {
-    margin: 10px 0;
-    color: #af965e;
+    background: rgba(255, 255, 255, 0.11); 
+    padding: 5px 10px;
+    color: #fff; 
+    border-radius: 5px;
+}
+
+.category p {
+    color: #bdbdbd;
 }
 
 /* Features Section */
 .features {
+    color: #af965e;
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 30px;
+    justify-content: space-between;  /* Distribute the items evenly */
+    gap: 20px;  /* Adjust the space between items */
     padding: 50px 20px;
     background: #111;
-    margin-top: 50px;  /* Add margin to create space from the categories section */
+    margin-top: 50px;
 }
 
 .feature {
     text-align: center;
-    width: 300px;
+    flex: 1; 
+    min-width: 250px;
+    flex-direction: column;
+    justify-content: center; 
 }
 
 .feature img {
     width: 100px;
-    height: auto;
+    height: 150px;  
+    object-fit: contain; 
+    margin-bottom: 15px;
 }
 
 /* About Us Section */
