Add slidding images to the hero section

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -3,6 +3,13 @@
 
 <!-- Hero Section -->
 <section class="hero">
+  <div class="hero-slider-wrapper">
+    <div class="hero-slider">
+      <img src="{% static 'images/slider-image1.png' %}" alt="Slider Image 1">
+      <img src="{% static 'images/slider-image2.jpg' %}" alt="Slider Image 2">
+      <img src="{% static 'images/slider-image3.jpg' %}" alt="Slider Image 3">
+    </div>
+  </div>
   <div class="hero-content">
     <h1>Welcome to <span class="highlight">Sip Out Loud</span></h1>
     <p>Your one-stop shop for premium drinks.</p>
