--- a/templates/base.html
+++ b/templates/base.html
@@ -130,5 +130,8 @@
         });
     </script>
     {% endblock %}
+    
+    <script src="{% static 'js/main.js' %}"></script>
+    
 </body>
 </html>
