--- a/static/css/base.css
+++ b/static/css/base.css
@@ -105,25 +105,42 @@ footer {
 
 /* index.html styling */
 
-/* Hero Section */
 h1, h2, h3 {
     text-align: center;
 }
 
 /* Hero Section */
 .hero {
-    background: url('/media/hero-banner.jpg') center/cover no-repeat;
-    text-align: center;
-    padding: 100px 20px;
+    position: relative;
+    height: 75vh;
+    overflow: hidden;
 }
 
-.hero-content {
-    max-width: 600px;
-    margin: auto;
+.hero-slider-wrapper {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
-.hero .highlight {
-    color: #af965e;
+.hero-slider {
+    display: flex;
+    width: 300%;
+    height: 100%;
+    animation: slide 9s infinite ease-in-out;
+}
+
+.hero-slider img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+@keyframes slide {
+    0% { transform: translateX(0%); }
+    33% { transform: translateX(-100%); }
+    66% { transform: translateX(-200%); }
+    100% { transform: translateX(0%); }
 }
 
 .btn {
@@ -226,9 +243,9 @@ h1, h2, h3 {
 
 .feature img {
     width: 100px;
-    height: 150px;  
-    object-fit: contain; 
-    margin-bottom: 15px;
+    height: auto;
+    max-width: 150px;  
+    margin-bottom: 20px;
 }
 
 /* About Us Section */
