--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,14 @@
     {% block extra_css %}{% endblock %}
 </head>
 <body>
+
+     <!-- Mobile Top Header -->
+     {% include 'includes/mobile_top_header.html' %}
+
+      <!-- Main Navigation -->
+    {% include 'includes/main_nav.html' %}
+
+
     <!-- Header -->
     <header class="container-fluid fixed-top bg-black p-3">
     <div class="d-flex justify-content-between align-items-center">
@@ -46,23 +54,29 @@
                     <li class="nav-item"><a class="nav-link text-light" href="#">Contact Us</a></li>
                 </ul>
                 <ul class="navbar-nav ms-auto align-items-center">
-                    {% if request.user.is_authenticated %}
-                        {% if request.user.is_superuser %}
-                            <li class="nav-item">
-                                <a href="#" class="nav-link text-light">Project Management</a>
-                            </li>
-                        {% endif %}
-                        <li class="nav-item">
-                            <form action="{% url 'logout' %}" method="post" class="d-inline">
-                                {% csrf_token %}
-                                <button type="submit" class="nav-link text-light border-0 p-0">Logout</button>
-                            </form>
-                        </li>
-                    {% else %}
-                        <li class="nav-item">
-                            <a href="{% url 'login' %}" class="nav-link text-light">Login</a>
-                        </li>
-                    {% endif %}
+                    <li class="nav-item dropdown">
+                        <a class="text-light nav-link" href="#" id="user-options" data-bs-toggle="dropdown">
+                            <div class="text-center">
+                                <i class="fas fa-user fa-lg"></i>
+                                <p class="my-0">My Account</p>
+                            </div>
+                        </a>
+                        <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                            {% if request.user.is_authenticated %}
+                                {% if request.user.is_superuser %}
+                                    <a href="{% url 'dashboard' %}" class="dropdown-item">Project Management</a>
+                                {% endif %}
+                                <a href="#" class="dropdown-item">My Profile</a>
+                                <form action="{% url 'logout' %}" method="post" class="dropdown-item">
+                                    {% csrf_token %}
+                                    <button type="submit" class="btn btn-link p-0">Logout</button>
+                                </form>
+                            {% else %}
+                                <a href="{% url 'register' %}" class="dropdown-item">Register</a>
+                                <a href="{% url 'login' %}" class="dropdown-item">Login</a>
+                            {% endif %}
+                        </div>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link text-light" href="#">Total: 
                             {% if grand_total %}
@@ -75,12 +89,12 @@
                 </ul>
             </div>
         </nav>
-        
+    </div>
+    <div class="text-center text-white bg-black py-2">
+        Free shipping on orders over €{{ free_shipping_threshold }}!
     </div>
 </header>
 
-
-    
     {% if messages %}
         <div class="message-container"></div>
     {% endif %}
@@ -110,6 +124,7 @@
     {% block corejs %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <script src="https://kit.fontawesome.com/7fd7645862.js" crossorigin="anonymous"></script>
     {% endblock %}
     
     {% block postloadjs %}
