--- a/templates/base.html
+++ b/templates/base.html
@@ -90,7 +90,7 @@
             </div>
         </nav>
     </div>
-    <div class="text-center text-white bg-black py-2">
+    <div class="shipping text-center bg-white py-2">
         Free shipping on orders over €{{ free_shipping_threshold }}!
     </div>
 </header>
