--- a/static/css/base.css
+++ b/static/css/base.css
@@ -467,7 +467,8 @@ h1, h2, h3 {
 .footer {
     background-color: #000;
     color: #fff;
-    padding: 40px 0;
+    min-height: 300px;
+    padding-bottom: 50px;
     font-size: 14px;
 }
 
@@ -511,6 +512,10 @@ h1, h2, h3 {
 
 .footer .btn-gold:hover {
     background-color: #e6c200;
+}
+
+#contact {
+    scroll-margin-top: 120px; /* Adjust based on header height */
 }
 
 /* Responsive Design */
