--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item"><a class="nav-link text-light" href="#">Home</a></li>
                     <li class="nav-item"><a class="nav-link text-light" href="#">Collection</a></li>
-                    <li class="nav-item"><a class="nav-link text-light" href="#">Contact Us</a></li>
+                    <li class="nav-item"><a class="nav-link text-light contact-link" href="#contact">Contact Us</a></li>
                 </ul>
                 <ul class="navbar-nav ms-auto align-items-center">
                     <li class="nav-item dropdown">
@@ -107,7 +107,7 @@
         <div class="container">
             <div class="row">
                 <!-- Contact Section -->
-                <div class="col-md-4 text-center text-md-start mb-3">
+                <div class="col-md-4 text-center text-md-start mb-3" id="contact">
                     <h4 class="footer-title">Contact Us</h4>
                     <p>Email: info@sipoutloud.com</p>
                     <p>Phone: +353 456 7890</p>
@@ -173,10 +173,32 @@
             },
             loop: true,
         });
+
+        document.addEventListener("DOMContentLoaded", function () {
+            document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+                anchor.addEventListener("click", function (e) {
+                    e.preventDefault();
+                    const target = document.querySelector(this.getAttribute("href"));
+                    if (target) {
+                        const headerOffset = document.querySelector("header").offsetHeight;
+                        const elementPosition = target.getBoundingClientRect().top + window.scrollY;
+                        const offsetPosition = elementPosition - headerOffset;
+    
+                        window.scrollTo({
+                            top: offsetPosition,
+                            behavior: "smooth"
+                        });
+                    }
+                });
+            });
+        });
+        
     </script>
     {% endblock %}
     
     <script src="{% static 'js/main.js' %}"></script>
+
     
 </body>
+
 </html>
