--- a/templates/base.html
+++ b/templates/base.html
@@ -49,8 +49,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
-                    <li class="nav-item"><a class="nav-link text-light" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link text-light" href="#">Collection</a></li>
+                    <li class="nav-item"><a class="nav-link text-light" href="{% url 'home' %}">Home</a></li>
                     <li class="nav-item"><a class="nav-link text-light contact-link" href="#contact">Contact Us</a></li>
                 </ul>
                 <ul class="navbar-nav ms-auto align-items-center">
